[gd_scene load_steps=5 format=2]

[ext_resource path="res://props/mushroom/mushroom.png" type="Texture" id=1]
[ext_resource path="res://props/mushroom/mushroom.gd" type="Script" id=2]
[ext_resource path="res://props/E.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.51554

[node name="Mushroom" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.88988, 0.15749 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.44613, 0.187286 )
scale = Vector2( 0.749, 1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( -1.10301, -25.5121 )
scale = Vector2( 0.0457136, 0.0538745 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Mushroom_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Mushroom_area_exited"]
